line chart mini with area chart complete

--- a/projects/sa-charts-demo/src/app/app.component.html
+++ b/projects/sa-charts-demo/src/app/app.component.html
@@ -1,1 +1,8 @@
-<sa-line-chart-mini></sa-line-chart-mini>
+<sa-line-chart-mini
+    [data]="data"
+    [curve]="curveTypes.bundleBeta1"
+    [showArea]="true"
+    [strokeWidth]="4"
+></sa-line-chart-mini>
+<button (click)="addSeries()" type="button">Add Series</button>
+<button (click)="updateSeries()" type="button">Update Series</button>
