--- a/projects/sa-charts-demo/src/app/app.component.html
+++ b/projects/sa-charts-demo/src/app/app.component.html
@@ -1,9 +1,9 @@
-<sa-line-chart-mini
+<sa-line-chart
     [data]="data"
     [curve]="curveTypes.natural"
     [showArea]="true"
     [strokeWidth]="4"
     [dimensions]="dems"
-></sa-line-chart-mini>
+></sa-line-chart>
 <button (click)="addSeries()" type="button">Add Series</button>
 <button (click)="updateSeries()" type="button">Update Series</button>
